@@ -30,7 +30,7 @@ public class FaaFormFactory implements IFormFactory{
 			  } 
 		         try
 			  {
-			    form = clazz.newInstance();
+			    form = clazz.getDeclaredConstructor().newInstance();
 			  }
 			  catch (Exception e)
 			  {
